# bedfinder

./: LICENSE  MANIFEST.in  McKenzieFiltering.py  README.md  RandomForest.ipynb  bedmap-env.yml  bedmap.py  filtering.py  future.md  newdata_applications.ipynb  performance_metrics.ipynb  pyproject.toml  requirements.txt  script_use_example.ipynb  utilities.py
.ipynb_checkpoints/: RandomForest-checkpoint.ipynb  bedmap-env-checkpoint.yml
_build/.doctrees/: markdown-notebooks.doctree  markdown.doctree  mymarkdownfile.doctree  randomforest.doctree  results.doctree
_build/html/: bedforms.html  future.html  intro.html  markdown-notebooks.html  markdown.html  mymarkdownfile.html  notebooks.html  objects.inv  search.html
_build/html/_sources/: intro.md  mymarkdownfile.md
_build/jupyter_execute/: apply.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
arcgis_bedmap/: arcbedmap.py
bedfinder/: bedmap.py
bedmap/: McKenzieFiltering.py  __init__.py  bedmap.py  utilities.py
bedmap/models/: XGBoost.pkl
book/: _toc.yml  bedforms.md  future.md  intro.md  randomforest.md  results.md
book/_build/.doctrees/: apply.doctree  bedforms.doctree  environment.pickle  future.doctree  intro.doctree  notebooks.doctree
book/_build/html/: .buildinfo  apply.html  genindex.html  randomforest.html  results.html  searchindex.js
book/_build/html/_sources/: bedforms.md
book/_build/jupyter_execute/: randomforest.ipynb
data/: TPI_processed.csv  wi_McKenziefilter.csv  wi_McKenziemodels_output.csv
figs/: combo_filtering_confmatrix.eps  mckenzie_filtering_confmatrix.eps  nm_filtering_confmatrix.eps  rus_filtering_confmatrix.eps
models/: XGBoost.pkl
notebooks/: newdata_applications.ipynb  performance_metrics.ipynb
