[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bedmap"
version = "0.0.1"
authors = [
  { name="Ellianna Abrahams", email="ellianna@berkeley.edu" },
  { name="Marion McKenzie", email="marion.mckenzie@mines.edu" },
]
description = "A Python package to automate the classification of glacial bedforms."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Earth Sciences"
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/elliesch/rf_bedform_mapping"
Issues = "https://github.com/elliesch/rf_bedform_mapping/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["bedmap-env.yml"]}